helm/01-prereqs/01-ldap/01-yaml/gui/01-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ldapgui
  labels:
    app: ldapgui
spec:
  replicas: 1
  selector:
    matchLabels:
       app: ldapgui
  template:
    metadata:
      labels:
        app: ldapgui
    spec:
      containers:
        - name: ldapgui
          image: rschaeuble/phpldapadmin
          ports:
            - containerPort: 80
              name: ldapgui
          securityContext:
            allowPrivilegeEscalation: true
            privileged: true
            readOnlyRootFilesystem: false
            runAsNonRoot: false
            runAsUser: 0
      serviceAccount: cp4ba-common-sa
      serviceAccountName: cp4ba-common-sa
