helm/01-prereqs/01-ldap/01-yaml/gui/02-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: ldapgui
  name: ldapgui
spec:
  type: ClusterIP
  ports:
    - port: 80
  selector:
    app: ldapgui
