helm/01-prereqs/01-ldap/01-yaml/gui/03-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: ldapgui
spec:
  port:
    targetPort: 80
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
  to:
    kind: Service
    name: ldapgui
    weight: 100
  wildcardPolicy: None
